[package]
name = "webciify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tapciify = { version="2.0.0", git="https://github.com/tapnisu/tapciify" }
image = "0.24.6"
axum = "0.6.19"
tokio = { version="1", features=["full","rt-multi-thread"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
reqwest = {version="*", features=["blocking"]}